reorganized the youtube music downloader file to only download files that have not been downloaded yet

--- a/config.toml
+++ b/config.toml
@@ -8,6 +8,8 @@ enabled_commands=[
   "audioMigration",
   "localMusicSearch",
   "convertToALAC",
-  "getYouTubeUrls"
+  "getYouTubeUrls",
+  "search_1001tracklists",
+  "cleanMetadata"
 ]
 
