fix: updated downloadMusicList.py to handle artist and title metadata more proper

--- a/config.toml
+++ b/config.toml
@@ -10,6 +10,7 @@ enabled_commands=[
   "convertToALAC",
   "getYouTubeUrls",
   "search_1001tracklists",
-  "cleanMetadata"
+  "cleanMetadata",
+  "getSongInfo"
 ]
 
